-Added Alythum Weapons


-------------------------------------------------------------------------------

8/13/2024 - 8/14/2024
Version 0.3.1
Posted By: Dalton Carter

-Added Custom Enchantments, Effects, Potions, and Brewing Recipes
-Added Lightning Striker 1 and 2 Enchants
-Added Freeze Effect, Freeze Potion, and Freeze potion Recipe

Note: While Assisting with The Glowing Tree Mod, I learned how to make Potion effect last forever,
and how to deal with the handling for when it is used as an Armor Set Bonus.

-------------------------------------------------------------------------------

8/16/2024
Version 0.3.1
Posted By: Dalton Carter

-Added Yokaran Bloom Tall Flower
-Added Nod Crest Large


======================================================
LEGACY 1.16.5 Changelog
0.5.2
======================================================
 (0.1 - 0.5): 10/08/2023 - 3/20/2024
 Changelog initiated:
 - Separated Crystal Tech mod from, Tutorial mod and Glowing Tree 16.5 mod.
 - Blossom Trees, Spread Logic, Tiberium Crops, Flower of Life, Deco Blocks, basic items,
 fluids, Ores, plagued weapons, Gundanium Armor, horse armor, Tags, Ore Gen, Tree gen, structure gen, and all associated
 textures, loot tables, and recipes added/created.
 -Added License and ReadMe

 (0.5.2): 3/22/2024
 - Explosion effect added when mining Blue, Red, and Purple Tiberium without a silk touch pickaxe.
 - Tiberium crop texture changed to Cross render type.
 - Fixed Tiberium and Ichor soil Sustain Plant Logic. Blocks now only accept specific plants/ certain types of Tiberium.
 - Began adding Tiberium Infection logic to Tiberium/Ichor soil, created necessary Mod Tags for infection logic,
 which will include Plagued Logs infecting other logs and leaves, and Plagued Leaves infecting other leaves.
 - Added explosion resistance to appropriate blocks. I.E Mod Metal blocks, Tiberium/Ichor Soil, and Blossom Trees.
 - Updated License and Readme.
 - Credits File Added.