@@ -1,4 +1,4 @@
-// 1.20.1	2024-05-05T01:58:29.8265578	Tags for minecraft:block mod id crystechmod
+// 1.20.1	2024-08-16T21:11:27.5604458	Tags for minecraft:block mod id crystechmod
 3c0db247b35cadbc078a1b88ac98777330717935 data/crystechmod/tags/blocks/hazmat_glass_panes.json
 fde81393ef244e7ec272ed755f993f402ff61d5d data/crystechmod/tags/blocks/hazmat_glass_panes2.json
 94d3b46aed493f5842b549f658dfac45bf562a02 data/crystechmod/tags/blocks/needs_alythum_tool.json
