@@ -1,4 +1,4 @@
-// 1.20.1	2024-05-03T01:48:51.736471	Tags for minecraft:item mod id crystechmod
+// 1.20.1	2024-08-16T21:11:27.5634456	Tags for minecraft:item mod id crystechmod
 3c0db247b35cadbc078a1b88ac98777330717935 data/crystechmod/tags/items/hazmat_glass_panes.json
 ecf2a3889f87177c168a6ffc2c5f25e077381f19 data/crystechmod/tags/items/sticks.json
 39acdcf33383e05a367faca9c1c896cc6cdba9c0 data/crystechmod/tags/items/tibercrete_sands.json
