@@ -1,4 +1,4 @@
-// 1.20.1	2024-04-21T14:36:50.2016724	Block States: crystechmod
+// 1.20.1	2024-08-16T21:11:27.5389809	Block States: crystechmod
 b96cfdc734a704501413713f3f2c8cfcb4ba2a5c assets/crystechmod/blockstates/aboreus_crystal.json
 2bc3c855a08913269329ffaaf6ab3588f39fd679 assets/crystechmod/blockstates/aboreus_stone.json
 4eb0e66f6b57acdc95618edddf4b631706bf4ed4 assets/crystechmod/blockstates/aeries_block.json
