@@ -1,4 +1,4 @@
-// 1.20.1	2024-05-05T01:58:29.8207715	Recipes
+// 1.20.1	2024-08-16T21:11:27.55693	Recipes
 b7b36df93a2e80341f639d64a347f734de076911 data/crystechmod/advancements/recipes/misc/aeries_block.json
 c9b2a29a253edecb5eb071fd68ace8b5b035a044 data/crystechmod/advancements/recipes/misc/aeries_crystal.json
 91ea0874597b40be81b3e608c875097962cd2a20 data/crystechmod/advancements/recipes/misc/alythum_axe.json
