@@ -1,4 +1,4 @@
-// 1.20.1	2024-05-05T01:58:29.8270986	Item Models: crystechmod
+// 1.20.1	2024-08-16T21:11:27.5604458	Item Models: crystechmod
 59af2f348d998b633663b4205f4a1565e13933c0 assets/crystechmod/models/item/aeries_crystal.json
 e93e288155e12d75f29575ccb056b60bd51b7bea assets/crystechmod/models/item/alythum_axe.json
 8b8decbbfe4dec30a6f3d7b8076de9aa2af2dbc2 assets/crystechmod/models/item/alythum_boots.json
