@@ -33,6 +33,8 @@ public class DataGenerators {
 
         generator.addProvider(event.includeServer(), new ModItemTagGenerator(packOutput, lookupProvider,
                 blockTagGenerator.contentsGetter(), existingFileHelper));
+
+
     }
 
 
