@@ -1,0 +1,33 @@
+package com.CartersDev.crystechmod.datagen;
+
+import com.CartersDev.crystechmod.CrystalTech;
+import com.CartersDev.crystechmod.item.ModItems;
+import com.CartersDev.crystechmod.loot.AddItemModifier;
+import net.minecraft.data.PackOutput;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.storage.loot.predicates.LootItemBlockStatePropertyCondition;
+import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
+import net.minecraft.world.level.storage.loot.predicates.LootItemRandomChanceCondition;
+import net.minecraftforge.common.data.GlobalLootModifierProvider;
+import net.minecraftforge.common.loot.LootTableIdCondition;
+
+public class ModGlobalLootModifiersProvider extends GlobalLootModifierProvider {
+    public ModGlobalLootModifiersProvider(PackOutput output) {
+        super(output, CrystalTech.MOD_ID);
+    }
+
+    @Override
+    protected void start() {
+        add("tiberium_fruit_from_grass", new AddItemModifier(new LootItemCondition[] {
+                LootItemBlockStatePropertyCondition.hasBlockStateProperties(Blocks.GRASS).build(),
+                LootItemRandomChanceCondition.randomChance(0.35f).build()}, ModItems.TIBERIUM_FRUIT.get()));
+
+        add("tiberium_fruit_from_creeper", new AddItemModifier(new LootItemCondition[] {
+                new LootTableIdCondition.Builder(new ResourceLocation("entities/creeper")).build() }, ModItems.TIBERIUM_FRUIT.get()));
+
+        add("lg_core_blend_from_jungle_temples", new AddItemModifier(new LootItemCondition[] {
+                new LootTableIdCondition.Builder(new ResourceLocation("chests/jungle_temple")).build() }, ModItems.LG_CORE_BLEND.get()));
+
+    }
+}
